--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-...
+<head>
+  <meta charset="UTF-8">
+  <title>Cirurgia Planejada</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <div class="container">
+    <h1 id="question"></h1>
+    <div id="options" class="options"></div>
+    <p class="progress" id="progress"></p>
+  </div>
+
+  <script src="app.js"></script>
+</body>
 </html>
